# -*- mode: org; -*-
#+STARTUP: showall

* Development

  - Add =desktop-registry-remove-desktop= command to remove desktops you
    no longer (want to) use.